2008-08-14  Wakaba  <wakaba@suika.fam.cx>

	* cc-script.js, cc-style.js: Support for tab styling
	of the "input" subsections.  Support for the "details"
	widget.

2008-08-10  Wakaba  <wakaba@suika.fam.cx>

	* cc-script.js: Functions for tabbing are added.

	* cc-style.css: Tab styling rules are added.

2008-07-27  Wakaba  <wakaba@suika.fam.cx>

	* .htaccess: Files gone.

	* cc-interface.en.html, cc-todo.txt: Removed.

	* cc-about.en.html: New document.

	* cc.cgi: Insert document input section before anything.
	No check performed if no URL is specified and the
	input is empty.

	* error-description-source.xml (WebHACC:Heading): Link
	to cc-about in place of cc-interface.

2008-07-26  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: get_input_document function is now handled
	by WebHACC::Input classes.  |cc-script| reference
	is now generated by |html_header| in WebHACC::Output.

	* error-description-source.xml: Document URL and Request URL
	are now just "URLs".

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* .htaccess: error-description-source.xml is in UTF-8
	actually.

	* Makefile: Rule to make Japanese language catalog file
	is added.

	* cc-script.js: Line and column numbers are now taken
	from data-* attributes, not from textContent.

	* cc.cgi: Tentative support for Japanese/English conneg.
	(load_text_catalog, get_text): Removed (catalog text selection
	is now handled by WebHACC::Output).

	* error-description-source.xml: Catalog entries in new
	format are added.  Old catalog element is removed.

	* mkcatalog.pl: Support for non-English languages.
	Drop support for old catalog element.  Add support
	for new cat element.

	* mkdescription.pl: Drop support for old catalog element.
	Add support for new cat element.

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Code clean-up.

2008-07-21  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Old commented out code for additional
	information sections are removed.  They are now