@@ -432,21 +432,34 @@ mark {
 /* Tab navigation */
 
 body[data-scripted] > h1,
-body[data-scripted] > #input > h2 {
+body[data-scripted] > #input > h2,
+body[data-scripted] .section.subdoc > h2,
+body[data-scripted] .section.subdoc > h3,
+body[data-scripted] .section.subdoc > h4,
+body[data-scripted] .section.subdoc > h5,
+body[data-scripted] .section.subdoc > h6 {
   float: left;
   font-size: 100%;
   margin: 0;
   padding: 0 1em;
 }
 
-body[data-scripted] > #input > h2 {
+body[data-scripted] > #input > h2,
+body[data-scripted] .section.subdoc > h2,
+body[data-scripted] .section.subdoc > h3,
+body[data-scripted] .section.subdoc > h4,
+body[data-scripted] .section.subdoc > h5,
+body[data-scripted] .section.subdoc > h6 {
   margin-right: 1em;
   padding: 0.3em 0;
   border: thin hidden;
+  background-color: transparent;
+  color: inherit;
 }
 
 nav {
   display: block;
+  z-index: 100;
 }
 
 .section nav {
@@ -458,7 +471,8 @@ nav ul {
   padding: 1em 0 0 0;
 }
 
-#input nav ul {
+#input nav ul,
+.section.subdoc nav ul {
   padding-top: 0;
 }
 
@@ -490,7 +504,8 @@ nav [data-active] a {
 }
 
 body[data-scripted] > .section,
-body[data-scripted] > #input > .section {
+body[data-scripted] > #input > .section,
+body[data-scripted] .section.subdoc > .section {
   position: absolute;
   top: 100px; /* h1 > img's height is 90px */
   bottom: 0;
@@ -500,7 +515,8 @@ body[data-scripted] > #input > .section {
   overflow: auto;
 }
 
-body[data-scripted] > #input > .section {
+body[data-scripted] > #input > .section,
+body[data-scripted] .section.subdoc > .section {
   top: 2em;
 }
 
@@ -547,6 +563,6 @@ Copyright 2007-2008 Wakaba <w@suika.fam.cx>.
 This library is free software; you can redistribute it
 and/or modify it under the same terms as Perl itself.
 
-$Date: 2008/08/14 07:19:44 $
+$Date: 2008/08/14 09:16:52 $
 
 */
