@@ -1,5 +1,15 @@
 2008-08-14  Wakaba  <wakaba@suika.fam.cx>
 
+	* Input.pm (id_prefix): Use the parent subdoc's id_prefix
+	as the prefix of the subdoc id_prefix (e.g. subdoc-1-subdoc-1-
+	for subdoc #1.1).
+	(start_section): Set the role of the section element as subdoc.
+
+	* Output.pm (start_section): Support for "subdoc" role.
+	Use parent input's id_prefix as parent_id.
+
+2008-08-14  Wakaba  <wakaba@suika.fam.cx>
+
 	* Output.pm: Support for inner tabs for "input" subsections.
 	Improved support for "details" widget.
 
